--- a/NLP/Vectorization.ipynb
+++ b/NLP/Vectorization.ipynb
@@ -125,12 +125,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de1c79f3-e697-43cf-97c1-536d1151025f",
+   "cell_type": "markdown",
+   "id": "5a69dff5-c205-4b6a-8dab-5a3026822c9d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**TF-IDF**: TF-IDF weighs the importance of a word in a document based on its frequency in the document and its rarity across the corpus. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8fb5d320-9508-40bb-b4df-42ee1f09dbbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['enjoy' 'great' 'is' 'learning' 'love' 'nlp']\n",
+      "[[0.         0.         0.         0.         0.861037   0.50854232]\n",
+      " [0.         0.65249088 0.65249088 0.         0.         0.38537163]\n",
+      " [0.65249088 0.         0.         0.65249088 0.         0.38537163]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# same text like previous example\n",
+    "corpus = [\"I love NLP\", \"NLP is great\", \"I enjoy learning NLP\"]\n",
+    "\n",
+    "# Creation of TF-IDF model\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "print(vectorizer.get_feature_names_out())\n",
+    "print(X.toarray())"
+   ]
   }
  ],
  "metadata": {
